fix: gallery on mobile

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -172,6 +172,7 @@ body {
 
         .gallery-item {
           width: 50%;
+          margin-top: 0;
 
           img {
             border: 1px solid var(--blackOrWhite);
